k8s/mesh/observability-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-observability-listener
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
    - name: http-observe
      port: 8082
      targetPort: 8082
