k8s/mesh/observability-auth/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: observability-basic-auth
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 8082
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.basic_auth
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.basic_auth.v3.BasicAuth
            users:
              filename: /etc/istio/observability-auth/users
